infrastructure/k8s/deployment-me.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-pod-me
  namespace: onho
spec:
  replicas: 5
  selector:
    matchExpressions:
      - key: app
        operator: In
        values:
          - hello-world-pod-me
  template:
    metadata:
      labels:
        app: hello-world-pod-me
    spec:
      containers:
      - name: hello-node
        image: hello-node:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  namespace: onho
spec:
  selector:
    app: hello-world
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
